--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -32,26 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "015ddb9f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\girmachew\\AppData\\Local\\Temp\\ipykernel_17356\\166196781.py:1: DtypeWarning: Columns (32,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df  = pd.read_csv('../data/MachineLearningRating_v3.csv')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df  = pd.read_csv('../data/MachineLearningRating_v3.csv')"
+    "df  = pd.read_csv('../data/MachineLearningRating_v3.csv', low_memory=False )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "17216f7d",
    "metadata": {},
    "outputs": [
@@ -271,7 +262,7 @@
        "[5 rows x 52 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,20 +280,58 @@
     {
      "data": {
       "text/plain": [
-       "Index(['UnderwrittenCoverID', 'PolicyID', 'TransactionMonth',\n",
-       "       'IsVATRegistered', 'Citizenship', 'LegalType', 'Title', 'Language',\n",
-       "       'Bank', 'AccountType', 'MaritalStatus', 'Gender', 'Country', 'Province',\n",
-       "       'PostalCode', 'MainCrestaZone', 'SubCrestaZone', 'ItemType', 'mmcode',\n",
-       "       'VehicleType', 'RegistrationYear', 'make', 'Model', 'Cylinders',\n",
-       "       'cubiccapacity', 'kilowatts', 'bodytype', 'NumberOfDoors',\n",
-       "       'VehicleIntroDate', 'CustomValueEstimate', 'AlarmImmobiliser',\n",
-       "       'TrackingDevice', 'CapitalOutstanding', 'NewVehicle', 'WrittenOff',\n",
-       "       'Rebuilt', 'Converted', 'CrossBorder', 'NumberOfVehiclesInFleet',\n",
-       "       'SumInsured', 'TermFrequency', 'CalculatedPremiumPerTerm',\n",
-       "       'ExcessSelected', 'CoverCategory', 'CoverType', 'CoverGroup', 'Section',\n",
-       "       'Product', 'StatutoryClass', 'StatutoryRiskType', 'TotalPremium',\n",
-       "       'TotalClaims'],\n",
-       "      dtype='object')"
+       "['UnderwrittenCoverID',\n",
+       " 'PolicyID',\n",
+       " 'TransactionMonth',\n",
+       " 'IsVATRegistered',\n",
+       " 'Citizenship',\n",
+       " 'LegalType',\n",
+       " 'Title',\n",
+       " 'Language',\n",
+       " 'Bank',\n",
+       " 'AccountType',\n",
+       " 'MaritalStatus',\n",
+       " 'Gender',\n",
+       " 'Country',\n",
+       " 'Province',\n",
+       " 'PostalCode',\n",
+       " 'MainCrestaZone',\n",
+       " 'SubCrestaZone',\n",
+       " 'ItemType',\n",
+       " 'mmcode',\n",
+       " 'VehicleType',\n",
+       " 'RegistrationYear',\n",
+       " 'make',\n",
+       " 'Model',\n",
+       " 'Cylinders',\n",
+       " 'cubiccapacity',\n",
+       " 'kilowatts',\n",
+       " 'bodytype',\n",
+       " 'NumberOfDoors',\n",
+       " 'VehicleIntroDate',\n",
+       " 'CustomValueEstimate',\n",
+       " 'AlarmImmobiliser',\n",
+       " 'TrackingDevice',\n",
+       " 'CapitalOutstanding',\n",
+       " 'NewVehicle',\n",
+       " 'WrittenOff',\n",
+       " 'Rebuilt',\n",
+       " 'Converted',\n",
+       " 'CrossBorder',\n",
+       " 'NumberOfVehiclesInFleet',\n",
+       " 'SumInsured',\n",
+       " 'TermFrequency',\n",
+       " 'CalculatedPremiumPerTerm',\n",
+       " 'ExcessSelected',\n",
+       " 'CoverCategory',\n",
+       " 'CoverType',\n",
+       " 'CoverGroup',\n",
+       " 'Section',\n",
+       " 'Product',\n",
+       " 'StatutoryClass',\n",
+       " 'StatutoryRiskType',\n",
+       " 'TotalPremium',\n",
+       " 'TotalClaims']"
       ]
      },
      "execution_count": 10,
@@ -311,12 +340,12 @@
     }
    ],
    "source": [
-    "df.columns"
+    "df.columns.tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "11bab26d",
    "metadata": {},
    "outputs": [
@@ -378,7 +407,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "08b94092",
    "metadata": {},
    "outputs": [
@@ -399,7 +428,7 @@
        "(1000098, 52)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "92bceafd",
    "metadata": {},
    "outputs": [
@@ -486,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "399f9133",
    "metadata": {},
    "outputs": [
@@ -548,13 +577,284 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d4d9b1ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of duplicate rows: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"\\nNumber of duplicate rows: {df.duplicated().sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7e4cc554",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              count          mean           std           min  \\\n",
+      "UnderwrittenCoverID       1000098.0  1.048175e+05  6.329371e+04  1.000000e+00   \n",
+      "PolicyID                  1000098.0  7.956682e+03  5.290039e+03  1.400000e+01   \n",
+      "PostalCode                1000098.0  3.020601e+03  2.649854e+03  1.000000e+00   \n",
+      "mmcode                     999546.0  5.487770e+07  1.360381e+07  4.041200e+06   \n",
+      "RegistrationYear          1000098.0  2.010225e+03  3.261391e+00  1.987000e+03   \n",
+      "Cylinders                  999546.0  4.046642e+00  2.940201e-01  0.000000e+00   \n",
+      "cubiccapacity              999546.0  2.466743e+03  4.428006e+02  0.000000e+00   \n",
+      "kilowatts                  999546.0  9.720792e+01  1.939326e+01  0.000000e+00   \n",
+      "NumberOfDoors              999546.0  4.019250e+00  4.683144e-01  0.000000e+00   \n",
+      "CustomValueEstimate        220456.0  2.255311e+05  5.645157e+05  2.000000e+04   \n",
+      "NumberOfVehiclesInFleet         0.0           NaN           NaN           NaN   \n",
+      "SumInsured                1000098.0  6.041727e+05  1.508332e+06  1.000000e-02   \n",
+      "CalculatedPremiumPerTerm  1000098.0  1.178757e+02  3.997017e+02  0.000000e+00   \n",
+      "TotalPremium              1000098.0  6.190550e+01  2.302845e+02 -7.825768e+02   \n",
+      "TotalClaims               1000098.0  6.486119e+01  2.384075e+03 -1.200241e+04   \n",
+      "\n",
+      "                                   25%           50%           75%  \\\n",
+      "UnderwrittenCoverID       5.514300e+04  9.408300e+04  1.391900e+05   \n",
+      "PolicyID                  4.500000e+03  7.071000e+03  1.107700e+04   \n",
+      "PostalCode                8.270000e+02  2.000000e+03  4.180000e+03   \n",
+      "mmcode                    6.005692e+07  6.005842e+07  6.005842e+07   \n",
+      "RegistrationYear          2.008000e+03  2.011000e+03  2.013000e+03   \n",
+      "Cylinders                 4.000000e+00  4.000000e+00  4.000000e+00   \n",
+      "cubiccapacity             2.237000e+03  2.694000e+03  2.694000e+03   \n",
+      "kilowatts                 7.500000e+01  1.110000e+02  1.110000e+02   \n",
+      "NumberOfDoors             4.000000e+00  4.000000e+00  4.000000e+00   \n",
+      "CustomValueEstimate       1.350000e+05  2.200000e+05  2.800000e+05   \n",
+      "NumberOfVehiclesInFleet            NaN           NaN           NaN   \n",
+      "SumInsured                5.000000e+03  7.500000e+03  2.500000e+05   \n",
+      "CalculatedPremiumPerTerm  3.224800e+00  8.436900e+00  9.000000e+01   \n",
+      "TotalPremium              0.000000e+00  2.178333e+00  2.192982e+01   \n",
+      "TotalClaims               0.000000e+00  0.000000e+00  0.000000e+00   \n",
+      "\n",
+      "                                   max  \n",
+      "UnderwrittenCoverID       3.011750e+05  \n",
+      "PolicyID                  2.324600e+04  \n",
+      "PostalCode                9.870000e+03  \n",
+      "mmcode                    6.506535e+07  \n",
+      "RegistrationYear          2.015000e+03  \n",
+      "Cylinders                 1.000000e+01  \n",
+      "cubiccapacity             1.288000e+04  \n",
+      "kilowatts                 3.090000e+02  \n",
+      "NumberOfDoors             6.000000e+00  \n",
+      "CustomValueEstimate       2.655000e+07  \n",
+      "NumberOfVehiclesInFleet            NaN  \n",
+      "SumInsured                1.263620e+07  \n",
+      "CalculatedPremiumPerTerm  7.442217e+04  \n",
+      "TotalPremium              6.528260e+04  \n",
+      "TotalClaims               3.930921e+05  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.describe().T) # .T transposes the output for better readability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e45da86d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              count           mean           std  \\\n",
+      "SumInsured                1000098.0  604172.732589  1.508332e+06   \n",
+      "CalculatedPremiumPerTerm  1000098.0     117.875691  3.997017e+02   \n",
+      "TotalPremium              1000098.0      61.905496  2.302845e+02   \n",
+      "TotalClaims               1000098.0      64.861190  2.384075e+03   \n",
+      "\n",
+      "                                   min        25%          50%            75%  \\\n",
+      "SumInsured                    0.010000  5000.0000  7500.000000  250000.000000   \n",
+      "CalculatedPremiumPerTerm      0.000000     3.2248     8.436900      90.000000   \n",
+      "TotalPremium               -782.576754     0.0000     2.178333      21.929825   \n",
+      "TotalClaims              -12002.412281     0.0000     0.000000       0.000000   \n",
+      "\n",
+      "                                   max  \n",
+      "SumInsured                1.263620e+07  \n",
+      "CalculatedPremiumPerTerm  7.442217e+04  \n",
+      "TotalPremium              6.528260e+04  \n",
+      "TotalClaims               3.930921e+05  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[['SumInsured', 'CalculatedPremiumPerTerm', 'TotalPremium', 'TotalClaims']].describe().T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3cb4a55",
+   "metadata": {},
+   "source": [
+    "### Summarize Categorical Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "84ce8154",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Descriptive Statistics for Categorical Columns:\n",
+      "                      count unique                                 top  \\\n",
+      "TransactionMonth    1000098     23                 2015-08-01 00:00:00   \n",
+      "Citizenship         1000098      4                                       \n",
+      "LegalType           1000098      6                          Individual   \n",
+      "Title               1000098      5                                  Mr   \n",
+      "Language            1000098      1                             English   \n",
+      "Bank                 854137     11                 First National Bank   \n",
+      "AccountType          959866      3                     Current account   \n",
+      "MaritalStatus        991839      3                       Not specified   \n",
+      "Gender               990562      3                       Not specified   \n",
+      "Country             1000098      1                        South Africa   \n",
+      "Province            1000098      9                             Gauteng   \n",
+      "MainCrestaZone      1000098     16     Transvaal (all except Pretoria)   \n",
+      "SubCrestaZone       1000098     45                        Johannesburg   \n",
+      "ItemType            1000098      1                    Mobility - Motor   \n",
+      "VehicleType          999546      5                   Passenger Vehicle   \n",
+      "make                 999546     46                              TOYOTA   \n",
+      "Model                999546    411           QUANTUM 2.7 SESFIKILE 16s   \n",
+      "bodytype             999546     13                                 B/S   \n",
+      "VehicleIntroDate     999546    174                              4/2012   \n",
+      "AlarmImmobiliser    1000098      2                                 Yes   \n",
+      "TrackingDevice      1000098      2                                  No   \n",
+      "CapitalOutstanding  1000096   1160                                   0   \n",
+      "NewVehicle           846803      2                  More than 6 months   \n",
+      "WrittenOff           358197      2                                  No   \n",
+      "Rebuilt              358197      2                                  No   \n",
+      "Converted            358197      2                                  No   \n",
+      "CrossBorder             698      1                                  No   \n",
+      "TermFrequency       1000098      2                             Monthly   \n",
+      "ExcessSelected      1000098     13                           No excess   \n",
+      "CoverCategory       1000098     28                 Passenger Liability   \n",
+      "CoverType           1000098     22                          Own Damage   \n",
+      "CoverGroup          1000098     14                Comprehensive - Taxi   \n",
+      "Section             1000098      5                 Motor Comprehensive   \n",
+      "Product             1000098      4  Mobility Commercial Cover: Monthly   \n",
+      "StatutoryClass      1000098      1                          Commercial   \n",
+      "StatutoryRiskType   1000098      1                       IFRS Constant   \n",
+      "\n",
+      "                       freq  \n",
+      "TransactionMonth     106747  \n",
+      "Citizenship          895210  \n",
+      "LegalType            911929  \n",
+      "Title                933555  \n",
+      "Language            1000098  \n",
+      "Bank                 260811  \n",
+      "AccountType          597938  \n",
+      "MaritalStatus        986208  \n",
+      "Gender               940990  \n",
+      "Country             1000098  \n",
+      "Province             393865  \n",
+      "MainCrestaZone       296187  \n",
+      "SubCrestaZone        176020  \n",
+      "ItemType            1000098  \n",
+      "VehicleType          933598  \n",
+      "make                 813280  \n",
+      "Model                186087  \n",
+      "bodytype             844400  \n",
+      "VehicleIntroDate     287638  \n",
+      "AlarmImmobiliser     999861  \n",
+      "TrackingDevice       656617  \n",
+      "CapitalOutstanding   441735  \n",
+      "NewVehicle           845223  \n",
+      "WrittenOff           358165  \n",
+      "Rebuilt              358165  \n",
+      "Converted            358110  \n",
+      "CrossBorder             698  \n",
+      "TermFrequency        999554  \n",
+      "ExcessSelected       791235  \n",
+      "CoverCategory        104158  \n",
+      "CoverType            104183  \n",
+      "CoverGroup           824124  \n",
+      "Section              828125  \n",
+      "Product              915028  \n",
+      "StatutoryClass      1000098  \n",
+      "StatutoryRiskType   1000098  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nDescriptive Statistics for Categorical Columns:\")\n",
+    "print(df.describe(include='object').T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "89666a4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Value counts for 'make':\n",
+      "make\n",
+      "TOYOTA                                 813280\n",
+      "MERCEDES-BENZ                           41940\n",
+      "CMC                                     21624\n",
+      "VOLKSWAGEN                              20929\n",
+      "C.A.M                                   16171\n",
+      "GOLDEN JOURNEY                          14462\n",
+      "NISSAN/DATSUN                           10997\n",
+      "JINBEI                                  10374\n",
+      "IVECO                                    8430\n",
+      "AUDI                                     7407\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Value counts for 'Country':\n",
+      "Country\n",
+      "South Africa    1000098\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Unique values in 'VehicleType':\n",
+      "['Passenger Vehicle' 'Medium Commercial' 'Heavy Commercial'\n",
+      " 'Light Commercial' 'Bus' nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the unique values and their frequencies for key categorical columns\n",
+    "print(\"\\nValue counts for 'make':\")\n",
+    "print(df['make'].value_counts().head(10)) # Top 10 most frequent makes\n",
+    "\n",
+    "print(\"\\nValue counts for 'Country':\")\n",
+    "print(df['Country'].value_counts())\n",
+    "\n",
+    "print(\"\\nUnique values in 'VehicleType':\")\n",
+    "print(df['VehicleType'].unique())"
    ]
   }
  ],
