Overall Loss ratio vary by Province, vehicle type and gender

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -10,19 +10,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "18dc89b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np # Used for checking for division by zero\n",
+    "sns.set_style('whitegrid')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "4663c1e1",
    "metadata": {},
    "outputs": [],
@@ -32,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "015ddb9f",
    "metadata": {},
    "outputs": [],
@@ -273,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "2ffb6732",
    "metadata": {},
    "outputs": [
@@ -334,7 +338,7 @@
        " 'TotalClaims']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d4d9b1ee",
    "metadata": {},
    "outputs": [
@@ -607,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7e4cc554",
    "metadata": {},
    "outputs": [
@@ -674,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "e45da86d",
    "metadata": {},
    "outputs": [
@@ -716,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "84ce8154",
    "metadata": {},
    "outputs": [
@@ -811,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "89666a4e",
    "metadata": {},
    "outputs": [
@@ -855,6 +859,222 @@
     "\n",
     "print(\"\\nUnique values in 'VehicleType':\")\n",
     "print(df['VehicleType'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa2aa374",
+   "metadata": {},
+   "source": [
+    "#### Calculate the Overall Loss Ratio for the Portfolio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "86579e9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall Loss Ratio for the portfolio: 104.77%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the sum of all claims and all premiums\n",
+    "total_claims = df['TotalClaims'].sum()\n",
+    "total_premium = df['TotalPremium'].sum()\n",
+    "\n",
+    "# Calculate the overall Loss Ratio\n",
+    "# Add a check to avoid division by zero if total premium is 0\n",
+    "if total_premium > 0:\n",
+    "    overall_loss_ratio = total_claims / total_premium\n",
+    "    print(f\"Overall Loss Ratio for the portfolio: {overall_loss_ratio:.2%}\")\n",
+    "else:\n",
+    "    print(\"Cannot calculate overall Loss Ratio: Total Premium is zero.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0deef203",
+   "metadata": {},
+   "source": [
+    "- A loss ratio less than 100% (1.00) means the company is making a profit from underwriting.\n",
+    "- A loss ratio greater than 100% (1.00) means the company is paying out more in claims than it is collecting in premiums.\n",
+    "- So, 104.77% mean company is paying out more in claims than it is collecting in premiums."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf425ca1",
+   "metadata": {},
+   "source": [
+    "#### Loss Ratio by Province"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbc120ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Loss Ratio by Province (sorted by highest Loss Ratio):\n",
+      "               TotalPremium   TotalClaims  LossRatio\n",
+      "Province                                            \n",
+      "Gauteng        2.405377e+07  2.939415e+07   1.222018\n",
+      "KwaZulu-Natal  1.320908e+07  1.430138e+07   1.082693\n",
+      "Western Cape   9.806559e+06  1.038977e+07   1.059472\n",
+      "North West     7.490508e+06  5.920250e+06   0.790367\n",
+      "Mpumalanga     2.836292e+06  2.044675e+06   0.720897\n",
+      "Free State     5.213632e+05  3.549223e+05   0.680758\n",
+      "Limpopo        1.537324e+06  1.016477e+06   0.661199\n",
+      "Eastern Cape   2.140104e+06  1.356427e+06   0.633813\n",
+      "Northern Cape  3.165581e+05  8.949051e+04   0.282699\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by Province and sum the TotalClaims and TotalPremium\n",
+    "loss_ratio_by_province = df.groupby('Province')[['TotalClaims', 'TotalPremium']].sum()\n",
+    "\n",
+    "# Calculate the Loss Ratio for each Province\n",
+    "loss_ratio_by_province['LossRatio'] = np.where(\n",
+    "    loss_ratio_by_province['TotalPremium'] > 0, \n",
+    "    loss_ratio_by_province['TotalClaims'] / loss_ratio_by_province['TotalPremium'], \n",
+    ")\n",
+    "\n",
+    "# Sort the results to see the highest loss ratios first\n",
+    "loss_ratio_by_province = loss_ratio_by_province.sort_values('LossRatio', ascending=False)\n",
+    "\n",
+    "print(\"\\nLoss Ratio by Province (sorted by highest Loss Ratio):\")\n",
+    "print(loss_ratio_by_province[['TotalPremium', 'TotalClaims', 'LossRatio']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d7301d9",
+   "metadata": {},
+   "source": [
+    "- Gauteng, KwaZulu-Natal, and Western Cape are Unprofitable\n",
+    "- Northern Cape is the Most Profitable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "230c9762",
+   "metadata": {},
+   "source": [
+    "####  Loss Ratio by VehicleType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "eeed3fb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Loss Ratio by VehicleType (sorted by highest Premium Volume):\n",
+      "                   TotalPremium   TotalClaims  LossRatio\n",
+      "VehicleType                                             \n",
+      "Passenger Vehicle  5.664202e+07  5.937207e+07   1.048198\n",
+      "Medium Commercial  3.922746e+06  4.119867e+06   1.050251\n",
+      "Heavy Commercial   4.609479e+05  7.504746e+05   1.628112\n",
+      "Light Commercial   2.604975e+05  6.045250e+04   0.232066\n",
+      "Bus                5.824474e+04  7.996535e+03   0.137292\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by VehicleType and sum the claims and premiums\n",
+    "loss_ratio_by_vehicle_type = df.groupby('VehicleType')[['TotalClaims', 'TotalPremium']].sum()\n",
+    "\n",
+    "# Calculate the Loss Ratio for each VehicleType\n",
+    "loss_ratio_by_vehicle_type['LossRatio'] = np.where(\n",
+    "    loss_ratio_by_vehicle_type['TotalPremium'] > 0,\n",
+    "    loss_ratio_by_vehicle_type['TotalClaims'] / loss_ratio_by_vehicle_type['TotalPremium'],\n",
+    "    0\n",
+    ")\n",
+    "\n",
+    "# Sort the results and filter out types with very low premium volumes if needed\n",
+    "loss_ratio_by_vehicle_type = loss_ratio_by_vehicle_type.sort_values('TotalPremium', ascending=False)\n",
+    "\n",
+    "print(\"\\nLoss Ratio by VehicleType (sorted by highest Premium Volume):\")\n",
+    "print(loss_ratio_by_vehicle_type[['TotalPremium', 'TotalClaims', 'LossRatio']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b347ed4f",
+   "metadata": {},
+   "source": [
+    "- Heavy Commercial highly unprofitable\n",
+    "- Medium Commercial slightly unprofitable\n",
+    "- Light Commercial and Bus  are highly profitable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e3c1d9f",
+   "metadata": {},
+   "source": [
+    "#### Loss Ratio by Gender"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2f6a4505",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Loss Ratio by Gender:\n",
+      "               TotalPremium   TotalClaims  LossRatio\n",
+      "Gender                                              \n",
+      "Female         3.044806e+05  2.502461e+05   0.821879\n",
+      "Male           1.580143e+06  1.396704e+06   0.883910\n",
+      "Not specified  5.920275e+07  6.271410e+07   1.059311\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group by Gender and sum the claims and premiums\n",
+    "loss_ratio_by_gender = df.groupby('Gender')[['TotalClaims', 'TotalPremium']].sum()\n",
+    "\n",
+    "# Calculate the Loss Ratio for each Gender\n",
+    "loss_ratio_by_gender['LossRatio'] = np.where(\n",
+    "    loss_ratio_by_gender['TotalPremium'] > 0,\n",
+    "    loss_ratio_by_gender['TotalClaims'] / loss_ratio_by_gender['TotalPremium'],\n",
+    "    0\n",
+    ")\n",
+    "\n",
+    "print(\"\\nLoss Ratio by Gender:\")\n",
+    "print(loss_ratio_by_gender[['TotalPremium', 'TotalClaims', 'LossRatio']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae442432",
+   "metadata": {},
+   "source": [
+    "- Female and Male : Both of these categories are profitable, with premiums collected comfortably exceeding claims paid out. The Female segment appears slightly more profitable than the Male segment.\n",
+    "- Not specified (1.05): This category is unprofitable, operating at a loss. For every R1 of premium collected from this segment, R1.05 is paid out in claims."
    ]
   }
  ],
