missing value checked

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1789,6 +1789,84 @@
    "source": [
     "file_converter.clean_data_types(df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3021db4c",
+   "metadata": {},
+   "source": [
+    "#### Check Missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "b60d1862",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UnderwrittenCoverID              0\n",
+       "PolicyID                         0\n",
+       "TransactionMonth                 0\n",
+       "IsVATRegistered                  0\n",
+       "Citizenship                      0\n",
+       "LegalType                        0\n",
+       "Title                            0\n",
+       "Language                         0\n",
+       "Bank                        145961\n",
+       "AccountType                  40232\n",
+       "MaritalStatus                 8259\n",
+       "Gender                        9536\n",
+       "Country                          0\n",
+       "Province                         0\n",
+       "PostalCode                       0\n",
+       "MainCrestaZone                   0\n",
+       "SubCrestaZone                    0\n",
+       "ItemType                         0\n",
+       "mmcode                         552\n",
+       "VehicleType                    552\n",
+       "RegistrationYear                 0\n",
+       "make                           552\n",
+       "Model                          552\n",
+       "Cylinders                      552\n",
+       "cubiccapacity                  552\n",
+       "kilowatts                      552\n",
+       "bodytype                       552\n",
+       "NumberOfDoors                  552\n",
+       "VehicleIntroDate               552\n",
+       "CustomValueEstimate         779642\n",
+       "AlarmImmobiliser                 0\n",
+       "TrackingDevice                   0\n",
+       "CapitalOutstanding             322\n",
+       "WrittenOff                  641901\n",
+       "Rebuilt                     641901\n",
+       "Converted                   641901\n",
+       "CrossBorder                 999400\n",
+       "SumInsured                       0\n",
+       "TermFrequency                    0\n",
+       "CalculatedPremiumPerTerm         0\n",
+       "CoverCategory                    0\n",
+       "CoverType                        0\n",
+       "CoverGroup                       0\n",
+       "Section                          0\n",
+       "Product                          0\n",
+       "StatutoryClass                   0\n",
+       "StatutoryRiskType                0\n",
+       "TotalPremium                     0\n",
+       "TotalClaims                      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
   }
  ],
  "metadata": {
