--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "ad969271",
    "metadata": {},
    "outputs": [
@@ -1647,7 +1647,7 @@
     "print(\"\\nCorrelation Matrix:\")\n",
     "print(correlation_matrix)\n",
     "\n",
-    "# Visualize the correlation matrix using a heatmap\n",
+    "# heatmap\n",
     "plt.figure(figsize=(6, 5))\n",
     "sns.heatmap(\n",
     "    correlation_matrix,\n",
