--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1671,30 +1671,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b4f0e3a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c3a915c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57771d23",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 88,
    "id": "7b59f273",
    "metadata": {},
@@ -1887,6 +1863,29 @@
     "plt.tight_layout() # Adjust layout to prevent overlaps\n",
     "plt.suptitle('Box Plots for Outlier Detection in Numerical Variables', fontsize=18, y=1.02)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf628424",
+   "metadata": {},
+   "source": [
+    "#### 3 Insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82593616",
+   "metadata": {},
+   "source": [
+    "- Insight 1: The Overall Portfolio is Underwriting at a Loss\n",
+    "    - The overall loss ratio is 104.77%.\n",
+    "- Insight 2: Underwriting Profitability Varies Dramatically by Geography\n",
+    "    - Gauteng, KwaZulu-Natal, and Western Cape are consistently paying out more in claims than they collect, Unprofitable\n",
+    "    - The Northern Cape is your most profitable region\n",
+    "- Insight 3: Profitable and Low-Risk Target Segments are Identifiable by Vehicle Type and Gender\n",
+    "    - Policies for Light Commercial vehicles and Buses are highly profitable, while Heavy and Medium Commercial are unprofitable\n",
+    "    - Policies for Female drivers are significantly more profitable (Loss Ratio: 82.19%) than those for Male drivers (88.39%) and especially the \"Not specified\" category (105.93%)"
    ]
   }
  ],
