--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -5,7 +5,8 @@
    "id": "93a84033",
    "metadata": {},
    "source": [
-    "# B5W3: End-to-End Insurance Risk Analytics & Predictive Modeling"
+    "# B5W3: End-to-End Insurance Risk Analytics & Predictive Modeling\n",
+    "## Project Planning - EDA & Stats"
    ]
   },
   {
@@ -1614,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "ad969271",
    "metadata": {},
    "outputs": [
